modify comments provider

--- a/_config.yml
+++ b/_config.yml
@@ -88,7 +88,7 @@ JB :
     intensedebate :
       account : 123abc
     facebook :
-      appid : 123
+      appid : 1606286159616425
       num_posts: 5
       width: 580
       colorscheme: light
